# boykisser-clan

./: boykisser-clan.sln
.github/workflows/: build.yml
boykisser-clan/: CMakeLists.txt  Directory.Build.props  boykisser-clan.vcxproj
boykisser-clan/include/: client.lua  worker.hpp
boykisser-clan/include/utils/: resource.h
boykisser-clan/src/: boykisser-clan.cpp  server.cpp  worker.cpp
boykisser-clanUI/: App.xaml  App.xaml.cs  ClientsWindow.xaml  ClientsWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ScriptsWindow.xaml  ScriptsWindow.xaml.cs
boykisser-clanUI/Properties/: Settings.Designer.cs
boykisserclan/: App.xaml  App.xaml.cs  ClientsWindow.xaml  ClientsWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ScriptsWindow.xaml  ScriptsWindow.xaml.cs  boykisserclan.csproj
boykisserclan/Properties/: Settings.Designer.cs
